Fixed saving private keys for the app version < 0.7.3.| Close #447

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -286,6 +286,8 @@
         <receiver android:name=".broadcastreceivers.MarkMessagesAsOldBroadcastReceiver" />
 
         <receiver android:name=".broadcastreceivers.CorruptedStorageBroadcastReceiver" />
+
+        <receiver android:name=".broadcastreceivers.UpdateStorageConnectorBroadcastReceiver" />
     </application>
 
 </manifest>
