--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -292,6 +292,12 @@
         <receiver android:name=".broadcastreceivers.CorruptedStorageBroadcastReceiver" />
 
         <receiver android:name=".broadcastreceivers.UpdateStorageConnectorBroadcastReceiver" />
+
+        <receiver android:name=".broadcastreceivers.AppUpdateBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
