--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -38,7 +38,7 @@ android {
             }
         }
         ndk {
-            abiFilters "armeabi-v7a", "x86", "x86_64"
+            abiFilters "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
         }
     }
 
