Added NodeRunnerActivity and BaseNodeActivity.| #506

--- a/FlowCrypt/src/main/AndroidManifest.xml
+++ b/FlowCrypt/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
   ~ Contributors: DenBond7
   -->
@@ -221,6 +220,10 @@
         <activity
             android:name=".ui.activity.NodeTestActivity"
             android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.activity.NodeRunnerActivity"
+            android:theme="@style/AppTheme.NoActionBar.Launcher" />
 
         <!-- Providers -->
         <provider
