--- a/gradle.properties
+++ b/gradle.properties
@@ -19,5 +19,6 @@
 # org.gradle.parallel=true
 #more details here https://youtu.be/7ll-rkLCtyk?t=1219
 org.gradle.caching=true
+org.gradle.jvmargs=-Xmx2g
 android.useAndroidX=true
 android.enableJetifier=true
