--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ install:
 before_script:
 - export ANDROID_NDK_HOME=$ANDROID_HOME/ndk-bundle
 script:
-- ./gradlew checkstyle assembleProdDebug
+  - ./gradlew assembleProdDebug
