--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -216,7 +216,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-contrib:${rootProject.ext.espressoVersion}"
     androidTestImplementation "androidx.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
     //https://mvnrepository.com/artifact/androidx.test.ext/junit
-    androidTestImplementation "androidx.test.ext:junit:1.1.0"
+    androidTestImplementation "androidx.test.ext:junit:1.1.1"
 
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
     testImplementation "junit:junit:${rootProject.ext.junitVersion}"
@@ -230,7 +230,7 @@ dependencies {
     implementation "androidx.browser:browser:${rootProject.ext.androidxBaseVersion}"
     implementation "androidx.recyclerview:recyclerview:${rootProject.ext.androidxBaseVersion}"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.1'
+    implementation "androidx.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     //https://developers.google.com/android/guides/setup
