--- a/FlowCrypt/build.gradle
+++ b/FlowCrypt/build.gradle
@@ -168,6 +168,10 @@ android {
         targetCompatibility rootProject.ext.javaSourceCompatibility
     }
 
+    lintOptions{
+        warningsAsErrors true
+    }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
     }
