--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -18,10 +22,14 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+
+        classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.0.0-RC15"
     }
 }
 
 allprojects {
+    apply from: "$rootDir/detekt.gradle"
+
     repositories {
         google()
         jcenter()
