Modified settings for 'LongMethod'.| #545

--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -65,7 +65,7 @@ complexity:
     threshold: 600
   LongMethod:
     active: true
-    threshold: 60
+    threshold: 150 # denbond7 - I changed this. Default was 60. Need to fix it in the future
   LongParameterList:
     active: true
     threshold: 6
