--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -20,16 +20,32 @@ blocks:
           value: /usr/lib/android-sdk
         - name: ANDROID_BIN
           value: /usr/lib/android-sdk/tools/bin
+        - name: SDK_ARCHIVE
+          value: sdk-tools-linux-4333796.zip
+        - name: CACHED_SDK_PATH
+          value: $SEMAPHORE_CACHE_DIR/$SDK_ARCHIVE
+        - name: ANDROID_HOME
+          value: /home/semaphore/Android/Sdk
       jobs:
         - name: Build
           commands:
-            - sudo apt update && sudo apt-get -y install android-sdk
-            - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
-            - unzip sdk-tools-linux-4333796.zip
-            - sudo mv tools/bin/* /usr/lib/android-sdk/tools/bin
-            - export PATH=$PATH:$ANDROID_BIN
-            - ls $ANDROID_BIN
-            - yes | sdkmanager --licenses
-#            - checkout
-#            - cd ~/git/flowcrypt-android
-#            - ./gradlew assembleProdDebug
+            - sudo rm -rf ~/.rbenv ~/.phpbrew # make more room in the environment
+            - sudo apt install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1
+            - ! [ -e $CACHED_SDK_PATH ] && wget "https://dl.google.com/android/repository/$SDK_ARCHIVE" -P $SEMAPHORE_CACHE_DIR
+            - mkdir -p $ANDROID_HOME
+            - yes 'y' | unzip $CACHED_SDK_PATH -d $ANDROID_HOME
+            - export PATH="$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH"
+            - echo "yes" | sdkmanager --licenses
+            - list-sdk-components
+            - sdkmanager --list
+            - (while sleep 3; do echo "y"; done) | sdkmanager "build-tools;26.0.1" "platforms;android-24" "extras;google;m2repository" "extras;android;m2repository" "platform-tools" "emulator" "system-images;android-24;google_apis;armeabi-v7a"
+            - echo -ne '\n' | avdmanager -v create avd -n semaphore-android-dev -k "system-images;android-24;google_apis;armeabi-v7a" --tag "google_apis" --abi "armeabi-v7a"
+#            - sudo apt update && sudo apt-get -y install android-sdk
+#            - wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip && unzip *.zip && rm *.zip
+#            - sudo mv tools/bin/* /usr/lib/android-sdk/tools/bin
+#            - export PATH=$PATH:$ANDROID_BIN
+#            - ls $ANDROID_BIN
+#            - yes | sdkmanager --licenses
+##            - checkout
+##            - cd ~/git/flowcrypt-android
+##            - ./gradlew assembleProdDebug
