--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -30,7 +30,7 @@ blocks:
         - name: Build
           commands:
             - sudo rm -rf ~/.rbenv ~/.phpbrew
-            - sudo apt install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1
+            - sudo apt-get update && sudo apt-get install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1
             - bash -c '! [ -e $CACHED_SDK_PATH ] && wget https://dl.google.com/android/repository/$SDK_ARCHIVE -P $SEMAPHORE_CACHE_DIR'
             - mkdir -p $ANDROID_HOME
             - yes 'y' | unzip $CACHED_SDK_PATH -d $ANDROID_HOME
