--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -28,11 +28,11 @@ blocks:
         - name: Build
           commands:
             - sudo rm -rf ~/.rbenv ~/.phpbrew && mkdir ~/cached
-            - sudo apt-get update && sudo apt-get install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1
+            - sudo apt-get update && sudo apt-get install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1 > /dev/null
             - bash -c '! [ -e "~/cached/$SDK_ARCHIVE" ] && wget https://dl.google.com/android/repository/$SDK_ARCHIVE -P ~/cached/'
-            - mkdir -p $ANDROID_HOME && unzip ~/cached/$SDK_ARCHIVE -d $ANDROID_HOME
+            - mkdir -p $ANDROID_HOME && unzip -qq ~/cached/$SDK_ARCHIVE -d $ANDROID_HOME
             - export PATH="$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH"
-            - echo "yes" | sdkmanager --licenses
+            - echo "yes" | sdkmanager --licenses > /dev/null
             - sdkmanager --list
             - (while sleep 3; do echo "y"; done) | sdkmanager "build-tools;26.0.1" "platforms;android-24" "extras;google;m2repository" "extras;android;m2repository" "platform-tools" "emulator" "system-images;android-24;google_apis;armeabi-v7a"
             - echo -ne '\n' | avdmanager -v create avd -n semaphore-android-dev -k "system-images;android-24;google_apis;armeabi-v7a" --tag "google_apis" --abi "armeabi-v7a"
