--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -16,13 +16,9 @@ blocks:
       env_vars:
         - name: SEMAPHORE_GIT_DIR
           value: /home/semaphore/git/flowcrypt-android
-        - name: ANDROID_SDK_ROOT
-          value: /usr/lib/android-sdk
-        - name: ANDROID_BIN
-          value: /usr/lib/android-sdk/tools/bin
         - name: SDK_ARCHIVE
           value: sdk-tools-linux-4333796.zip
-        - name: ANDROID_HOME
+        - name: ANDROID_SDK_ROOT
           value: /home/semaphore/Android/Sdk
       jobs:
         - name: Build
@@ -30,8 +26,8 @@ blocks:
             - sudo rm -rf ~/.rbenv ~/.phpbrew && mkdir ~/cached
             - sudo apt-get update && sudo apt-get install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1 > /dev/null
             - bash -c '! [ -e "~/cached/$SDK_ARCHIVE" ] && wget https://dl.google.com/android/repository/$SDK_ARCHIVE -P ~/cached/'
-            - mkdir -p $ANDROID_HOME && unzip -qq ~/cached/$SDK_ARCHIVE -d $ANDROID_HOME
-            - export PATH="$ANDROID_HOME/tools:$ANDROID_HOME/tools/bin:$ANDROID_HOME/platform-tools:$PATH"
+            - mkdir -p $ANDROID_SDK_ROOT && unzip -qq ~/cached/$SDK_ARCHIVE -d $ANDROID_SDK_ROOT
+            - export PATH="$ANDROID_SDK_ROOT/tools:$ANDROID_SDK_ROOT/tools/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
             - echo "yes" | sdkmanager --licenses > /dev/null
             - sdkmanager --list
             - (while sleep 3; do echo "y"; done) | sdkmanager "build-tools;26.0.1" "platforms;android-24" "extras;google;m2repository" "extras;android;m2repository" "platform-tools" "emulator" "system-images;android-24;google_apis;armeabi-v7a"
