--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -31,12 +31,11 @@ blocks:
             - export PATH="$ANDROID_SDK_ROOT/tools:$ANDROID_SDK_ROOT/tools/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
             - echo "yes" | sdkmanager --licenses > /dev/null
             - sdkmanager --list
-            - (while sleep 3; do echo "y"; done) | sdkmanager "build-tools;26.0.1" "platforms;android-24" "extras;google;m2repository" "extras;android;m2repository" "platform-tools" "emulator" "system-images;android-24;google_apis;armeabi-v7a"
+            - (while sleep 3; do echo "y"; done) | sdkmanager "build-tools;26.0.1" "platforms;android-28" "extras;google;m2repository" "extras;android;m2repository" "platform-tools" "emulator" "system-images;android-28;google_apis;armeabi-v7a" > /dev/null
             - echo -ne '\n' | avdmanager -v create avd -n semaphore-android-dev -k "system-images;android-24;google_apis;armeabi-v7a" --tag "google_apis" --abi "armeabi-v7a"
             - checkout && cd ~/git/flowcrypt-android
             - ./gradlew assembleProdDebug
             - ls
-            - ls ./release
             - ls ./build
             - ls ./build/*
             - ls ./FlowCrypt/build
