--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -34,13 +34,8 @@ blocks:
             - echo -ne '\n' | avdmanager -v create avd -n semaphore-android-dev -k "system-images;android-24;google_apis;armeabi-v7a" --tag "google_apis" --abi "armeabi-v7a"
             - checkout && cd ~/git/flowcrypt-android
             - ./gradlew assembleProdDebug
-            - ls
-            - ls ./build
-            - ls ./build/*
-            - ls ./FlowCrypt/build
-            - ls ./FlowCrypt/build/*
-            - mkdir ~/testable && echo "x" > ~/testable/nothing
-            - cache store android-testable-$SEMAPHORE_GIT_SHA ~/testable
+            - mkdir ~/testable && mv ./FlowCrypt/build/outputs/apk/prod/debug/FlowCrypt-prod-debug.apk ~/testable/FlowCrypt-prod-debug.apk
+            - cd ~ && cache store android-testable-$SEMAPHORE_GIT_SHA testable
 
   - name: Test
     task:
