--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -27,10 +27,10 @@ blocks:
             - checkout
             - cache restore android-sdk-$SEMAPHORE_GIT_BRANCH
             - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
-            - cache store android-sdk-$SEMAPHORE_GIT_BRANCH Android
+            - cache store android-sdk-$SEMAPHORE_GIT_BRANCH ./Android
             - ( cd $SEMAPHORE_GIT_DIR && ./gradlew assembleProdDebug )
             - mkdir ~/testable && mv $SEMAPHORE_GIT_DIR/FlowCrypt/build/outputs/apk/prod/debug/FlowCrypt-prod-debug.apk ~/testable/FlowCrypt-prod-debug.apk
-            - cache store android-testable-$SEMAPHORE_GIT_SHA testable
+            - cd ~ && cache store android-testable-$SEMAPHORE_GIT_SHA ./testable
 
   - name: Test
     task:
