--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -24,15 +24,15 @@ blocks:
           commands:
             - sudo rm -rf ~/.rbenv ~/.phpbrew
             - sudo apt-get -q update && sudo apt-get -q install -y libc6-i386 lib32stdc++6 lib32gcc1 lib32ncurses5 lib32z1
-            - checkout
+            - checkout && cd ~
             - cache restore android-sdk-$SEMAPHORE_GIT_BRANCH
             - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
             - echo $PWD
             - ls
-            - cache store android-sdk-$SEMAPHORE_GIT_BRANCH ./Android
+            - cache store android-sdk-$SEMAPHORE_GIT_BRANCH Android
             - ( cd $SEMAPHORE_GIT_DIR && ./gradlew assembleProdDebug )
             - mkdir ~/testable && mv $SEMAPHORE_GIT_DIR/FlowCrypt/build/outputs/apk/prod/debug/FlowCrypt-prod-debug.apk ~/testable/FlowCrypt-prod-debug.apk
-            - cd ~ && cache store android-testable-$SEMAPHORE_GIT_SHA ./testable
+            - cache store android-testable-$SEMAPHORE_GIT_SHA testable
 
   - name: Test
     task:
