fix build gradle cache per branch #635

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -29,8 +29,9 @@ blocks:
 
             - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
 
-            - export GRADLE_CACHE_KEY=gradle-cache-$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)
-            - cache restore $GRADLE_CACHE_KEY
+            - export GRADLE_CACHE_KEY=gradle-cache-$SEMAPHORE_GIT_BRANCH-$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)
+            - export GRADLE_CACHE_KEY_MASTER=gradle-cache-master-$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)
+            - cache restore $GRADLE_CACHE_KEY $GRADLE_CACHE_KEY_MASTER
             - ( cd $SEMAPHORE_GIT_DIR && ./gradlew assembleProdDebug )
             - cache has_key $GRADLE_CACHE_KEY || cache store $GRADLE_CACHE_KEY .gradle
 
