cache sdk folder after gradle - slow #635

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -31,7 +31,9 @@ blocks:
             - export GRADLE_CACHE_KEY_MASTER=gradle-cache-master-$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)
             - cache restore $GRADLE_CACHE_KEY,$GRADLE_CACHE_KEY_MASTER
             - ( cd $SEMAPHORE_GIT_DIR && ./gradlew assembleProdDebug )
-            - cache has_key $GRADLE_CACHE_KEY || cache store $GRADLE_CACHE_KEY .gradle
+            - rm -rf ~/.gradle/caches/$GRADLE_VERSION/ && find ~/.gradle/caches/ -name "*.lock" -type f -delete # https://medium.com/cirruslabs/mastering-gradle-caching-and-incremental-builds-37eb1af7fcde
+            # cache refreshed on build file conf change below. Also && refreshed android sdk cache, because gradle may install deps there
+            - cache has_key $GRADLE_CACHE_KEY || ( cache store $GRADLE_CACHE_KEY .gradle && cache store $ANDROID_SDK_CACHE_KEY Android )
 
             - mkdir ~/testable && mv $SEMAPHORE_GIT_DIR/FlowCrypt/build/outputs/apk/prod/debug/FlowCrypt-prod-debug.apk ~/testable/FlowCrypt-prod-debug.apk
             - cache store android-testable-$SEMAPHORE_GIT_SHA testable
