--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -25,10 +25,14 @@ blocks:
 
             # restore caches
             - export SUM=$(checksum $SEMAPHORE_GIT_DIR/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/FlowCrypt/build.gradle)-$(checksum $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh)
-            - export GRADLE_CACHE=gradle-cache-$SUM
-            - export ANDROID_SDK_CACHE=android-sdk-$SUM
+            - export GRADLE_CACHE=gradle-cache-$SUM # per conf files hash
+            - export ANDROID_SDK_CACHE=android-sdk-$SUM  # per conf files hash
+            - export BUILD_NATIVE_CACHE=build-native-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
+            - export BUILD_CACHE=build-cache-$SEMAPHORE_GIT_BRANCH-$SUM  # per branch and conf files hash
             - cache restore $ANDROID_SDK_CACHE
             - cache restore $GRADLE_CACHE
+            - cache restore $BUILD_NATIVE_CACHE
+            - cache restore $BUILD_CACHE
 
             # build
             - $SEMAPHORE_GIT_DIR/script/ci-install-android-sdk.sh
@@ -38,6 +42,8 @@ blocks:
             - find ~/.gradle/caches/ -name "*.lock" -type f -delete # https://medium.com/cirruslabs/mastering-gradle-caching-and-incremental-builds-37eb1af7fcde
             - cache has_key $GRADLE_CACHE || cache store $GRADLE_CACHE .gradle
             - cache has_key $ANDROID_SDK_CACHE || cache store $ANDROID_SDK_CACHE Android
+            - cache has_key $BUILD_NATIVE_CACHE || cache store $BUILD_NATIVE_CACHE git/flowcrypt-android/FlowCrypt/.externalNativeBuild
+            - cache has_key $BUILD_CACHE || cache store $BUILD_CACHE git/flowcrypt-android/FlowCrypt/build
 
             # transfer testable result to next block
             - mkdir ~/testable && mv $SEMAPHORE_GIT_DIR/FlowCrypt/build/outputs/apk/prod/debug/FlowCrypt-prod-debug.apk ~/testable/FlowCrypt-prod-debug.apk
